Added localhost login
For testing purposes, so that we can login locally.

--- a/app.yaml
+++ b/app.yaml
@@ -25,6 +25,10 @@ handlers:
 - url: /scripts
   static_dir: scripts
 
+- url: /login
+  script: main.app
+  login: required
+
 - url: /
   script: main.app
 
