Added invitation features
TO DO: Check and test that it is working flawlessly.

--- a/index.yaml
+++ b/index.yaml
@@ -14,3 +14,9 @@ indexes:
   ancestor: yes
   properties:
   - name: boardID
+
+- kind: PairInvitedBoard
+  ancestor: yes
+  properties:
+  - name: invited
+  - name: boardID
